--- a/blog-page/index.html
+++ b/blog-page/index.html
@@ -53,7 +53,7 @@
           <!-- item -->
           <div class = "design-item">
             <div class = "design-img">
-              <img src = "images/cat1.jpg" alt = "">
+              <img src = "image/cat1.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>cat</span>
             </div>
@@ -65,7 +65,7 @@
           <!-- item -->
           <div class = "design-item">
             <div class = "design-img">
-              <img src = "images/cat2.jpg" alt = "">
+              <img src = "image/cat2.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>cat</span>
             </div>
@@ -77,7 +77,7 @@
           <!-- item -->
           <div class = "design-item">
             <div class = "design-img">
-              <img src = "images/cat3.jpg" alt = "">
+              <img src = "image/cat3.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>cat</span>
             </div>
@@ -89,7 +89,7 @@
           <!-- item -->
           <div class = "design-item">
             <div class = "design-img">
-              <img src = "images/cat4.jpg" alt = "">
+              <img src = "image/cat4.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>cat</span>
             </div>
@@ -101,7 +101,7 @@
           <!-- item -->
           <div class = "design-item">
             <div class = "design-img">
-              <img src = "images/cat5.jpg" alt = "">
+              <img src = "image/cat5.jpg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>cat</span>
             </div>
@@ -113,7 +113,7 @@
           <!-- item -->
           <div class = "design-item">
             <div class = "design-img">
-              <img src = "images/cat6.jpeg" alt = "">
+              <img src = "image/cat6.jpeg" alt = "">
               <span><i class = "far fa-heart"></i> 22</span>
               <span>cat</span>
             </div>
@@ -139,7 +139,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/cat-1.jpg" alt = "">
+              <img src = "image/cat-1.jpg" alt = "">
               <span><i class = "far fa-heart"></i></span>
             </div>
             <div class = "blog-text">
@@ -153,7 +153,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/cat-2.jpg" alt = "">
+              <img src = "image/cat-2.jpg" alt = "">
               <span><i class = "far fa-heart"></i></span>
             </div>
             <div class = "blog-text">
@@ -167,7 +167,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/cat-3.jpg" alt = "">
+              <img src = "image/cat-3.jpg" alt = "">
               <span><i class = "far fa-heart"></i></span>
             </div>
             <div class = "blog-text">
@@ -181,7 +181,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/cat-4.jpg" alt = "">
+              <img src = "image/cat-4.jpg" alt = "">
               <span><i class = "far fa-heart"></i></span>
             </div>
             <div class = "blog-text">
@@ -195,7 +195,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/cat-5.jpg" alt = "">
+              <img src = "image/cat-5.jpg" alt = "">
               <span><i class = "far fa-heart"></i></span>
             </div>
             <div class = "blog-text">
@@ -209,7 +209,7 @@
           <!-- item -->
           <div class = "blog-item">
             <div class = "blog-img">
-              <img src = "images/cat-6.jpg" alt = "">
+              <img src = "image/cat-6.jpg" alt = "">
               <span><i class = "far fa-heart"></i></span>
             </div>
             <div class = "blog-text">
@@ -230,7 +230,7 @@
       <div class = "container">
         <div class = "about-content">
           <div class="about-img">
-            <img src = "images/cat-profile.jpg" alt = "">
+            <img src = "image/cat-profile.jpg" alt = "">
           </div>
           <div class = "about-text">
             <div class = "title">
